syntax = "proto3";
option go_package = "fserver-udp/proto";

/* Header byte */
enum Verb {
  REQUEST = 0;
  RESPONSE = 1;
  CONFIRMATION = 2;
}

/* Possible confirmation status */
enum Result {
  OK = 0;
  FILE_NOT_FOUND = 1;
  INVALID_PACKET_FORMAT = 2;
  ERROR_CHECK_SUM = 3;
  PACKET_MISS = 4;
  INVALID_TOKEN = 5;
  VALID_CHECKSUM = 6;
}

/*
  request file message, client must send
  0 -> REQUEST
  [0, protobuf data encoded]

  @param file_path file absolute path
*/
message RequestFile {
  string file_path = 1;
}

/*
  file chunk message, server must send after a request
  1 -> RESPONSE
  [1, protobuf data encoded]

  @param chunk 128 bytes file chunk
  @param token chunk hash identifier
*/
message FileChunk {
  bytes chunk = 1;
  string token = 2;
}

/*
  confirmation message, basic server and client verification
  2 -> CONFIRMATION
  [2, protobuf data encoded]

  @param result confirmation status
  @param token  token chunk identifier, checksum if result = 6
*/
message Confirmation {
  Result result = 1;
  string token = 2;
}
